<resources>
    <string name="app_name">Chimee</string>
    <string name="word_deleted"> </string>
    <string name="toast_message_deleted">  !</string>
    <string name="cant_delete_suffix">    </string>
    <string name="toast_message_empty">   </string>
    <string name="toast_no_sdcard_cant_send">SD   </string>
    <string name="toast_favorite_added"> </string>
    <string name="menu_item_wechat">WeChat</string>
    <string name="menu_item_photo">Photo</string>
    <string name="menu_item_favorite">Important</string>
    <string name="menu_item_overflow">More</string>
    <string name="menu_item_share">share</string>
    <string name="menu_item_open">open</string>
    <string name="menu_item_save">save</string>
    <string name="menu_item_settings">ᠳᠤᠬᠢᠷᠠᠭᠤᠯᠠᠭ᠎ᠠ</string>
    <string name="fab_item_copy">Copy</string>
    <string name="fab_item_paste">Paste</string>
    <string name="fab_item_clear">Clear</string>
    <string name="fab_item_color">Color</string>
    <string name="fab_item_font">Font</string>
    <string name="menu_item_about">  </string>
    <string name="menu_item_help"></string>
    <string name="menu_item_history">  </string>
    <string name="menu_item_clear_history">   </string>
    <string name="contextmenu_copy"></string>
    <string name="contextmenu_paste"></string>
    <string name="contextmenu_clear"></string>
    <string name="contextmenu_favorites">  </string>
    <string name="contextmenu_move_to_front">   </string>
    <string name="contextmenu_delete"></string>
    <string name="color_chooser_sample_text"></string>
    <string name="color_chooser_background_button"> </string>
    <string name="color_chooser_font_button"></string>
    <string name="dialog_title_default"></string>
    <string name="dialog_message_emptyfavorite">   ᠂         ᠃</string>
    <string name="dialog_one_button_default"></string>
    <string name="dialog_top_button_default"></string>
    <string name="dialog_bottom_button_default"></string>
    <string name="dialog_delete_history_title"></string>
    <string name="dialog_delete_history_message">      ?</string>
    <string name="dialog_delete_history_top_button"></string>
    <string name="dialog_delete_history_bottom_button"></string>
    <string name="dialog_font_white"> ?</string>
    <string name="listview_footer_load_more"> </string>
    <string name="settings_color_item"></string>
    <string name="settings_color_u"></string>
    <string name="settings_font_item">  </string>
    <string name="settings_font_detail"></string>
    <string name="settings_clear_item">    </string>
    <string name="settings_keyboard_item">  </string>
    <string name="keyboard_aeiou">     </string>
    <string name="keyboard_qwerty_short"></string>
    <string name="keyboard_aeiou_short"> </string>
    <string name="keyboard_qwerty">    </string>
    <string name="keyboard_abc">abc</string>
    <string name="keyboard_cyrillic">cyrillic</string>
    <string name="about_description_site_intro">Chimee      ᠄</string>
    <string name="about_description_site_address">www.studymongolian.net/apps/chimee/zh/</string>
    <string name="about_description_message">                ᠃</string>
    <string name="about_description_contact_intro"> ᠄</string>
    <string name="about_description_contact_address">www.studymongolian.net/contact-zh/</string>
    <string name="help_address">www.studymongolian.net/apps/chimee/zh/chimee-help/</string>
    <string name="favorite_db_message1">ᠰᠠᠢᠨ ᠪᠠᠢᠨ᠎ᠠ ᠤᠤ?</string>
    <string name="favorite_db_message2">ᠵᠠᠬᠢᠶ᠎ᠠ ᠶᠢ ᠳᠣᠪᠴᠢᠳᠠᠪᠠᠯ ᠨᠠᠢᠷᠠᠭᠤᠯᠬᠤ ᠴᠣᠩᠬᠣᠨ ᠳᠤ ᠬᠠᠭᠤᠯᠤᠨ ᠠᠪᠴᠢᠷᠠᠨ᠎ᠠ᠃</string>
    <string name="favorite_db_message3">ᠳᠠᠷᠤᠪᠴᠢ ᠶᠢ ᠳᠠᠷᠤᠭᠠᠳ ᠪᠠᠢᠪᠠᠯ ᠵᠠᠬᠢᠶ᠎ᠠ ᠶᠢ ᠤᠰᠠᠳᠬᠠᠵᠤ ᠬᠠᠶᠠᠨ᠎ᠠ᠃</string>
    <string name="m_a"></string>
    <string name="m_e"></string>
    <string name="m_i"></string>
    <string name="m_o"></string>
    <string name="m_u"></string>
    <string name="m_oe"></string>
    <string name="m_ue"></string>
    <string name="m_ee"></string>
    <string name="m_na"></string>
    <string name="m_ang"></string>
    <string name="m_ba"></string>
    <string name="m_pa"></string>
    <string name="m_qa"></string>
    <string name="m_ga"></string>
    <string name="m_ma"></string>
    <string name="m_la"></string>
    <string name="m_sa"></string>
    <string name="m_sha"></string>
    <string name="m_ta"></string>
    <string name="m_da"></string>
    <string name="m_cha"></string>
    <string name="m_ja"></string>
    <string name="m_ya"></string>
    <string name="m_ra"></string>
    <string name="m_wa"></string>
    <string name="m_fa"></string>
    <string name="m_ka"></string>
    <string name="m_tsa"></string>
    <string name="m_za"></string>
    <string name="m_haa"></string>
    <string name="m_lha"></string>
    <string name="m_zra"></string>
    <string name="m_zhi"></string>
    <string name="m_chi"></string>
    <string name="m_key_niguru"></string>
    <string name="m_key_fvs1_top">1</string>
    <string name="m_key_fvs2_top">2</string>
    <string name="m_key_fvs3_top">3</string>
    <string name="m_key_fvs1_bottom">4</string>
    <string name="m_key_fvs2_bottom">5</string>
    <string name="m_key_fvs3_bottom">6</string>
    <string name="m_key_namalaga">  </string>
    <string name="m_key_zwj">_</string>
    <string name="m_key_case_suffix">  </string>
    <string name="m_key_input">123</string>
    <string name="m_key_input_mongol"></string>
    <string name="m_key_input_long">en mn</string>
    <string name="m_key_comma">᠂</string>
    <string name="m_key_comma_long">᠃</string>
    <string name="m_key_question">\?</string>
    <string name="m_key_question_long">!</string>
    <string name="m_key_p_1">"1"</string>
    <string name="m_key_p_2">"2"</string>
    <string name="m_key_p_3">"3"</string>
    <string name="m_key_p_4">"4"</string>
    <string name="m_key_p_5">"5"</string>
    <string name="m_key_p_6">"6"</string>
    <string name="m_key_p_7">"7"</string>
    <string name="m_key_p_8">"8"</string>
    <string name="m_key_p_9">"9"</string>
    <string name="m_key_p_0">"0"</string>
    <string name="m_key_p_mongol_1">᠑</string>
    <string name="m_key_p_mongol_2">᠒</string>
    <string name="m_key_p_mongol_3">᠓</string>
    <string name="m_key_p_mongol_4">᠔</string>
    <string name="m_key_p_mongol_5">᠕</string>
    <string name="m_key_p_mongol_6">᠖</string>
    <string name="m_key_p_mongol_7">᠗</string>
    <string name="m_key_p_mongol_8">᠘</string>
    <string name="m_key_p_mongol_9">᠙</string>
    <string name="m_key_p_mongol_0">᠐</string>
    <string name="m_key_p_top_square_bracket">"["</string>
    <string name="m_key_p_bottom_square_bracket">"]"</string>
    <string name="m_key_p_top_paranthesis">"("</string>
    <string name="m_key_p_bottom_paranthesis">")"</string>
    <string name="m_key_p_top_single_quote">&lt;</string>
    <string name="m_key_p_bottom_single_quote">&gt;</string>
    <string name="m_key_p_top_double_quote">"«"</string>
    <string name="m_key_p_bottom_double_quote">"»"</string>
    <string name="m_key_p_question_exclamation">"⁈"</string>
    <string name="m_key_p_exclamation_question">"⁉"</string>
    <string name="m_key_p_exclamation_exclamation">"‼"</string>
    <string name="m_key_p_colon">""</string>
    <string name="m_key_p_ellipsis">""</string>
    <string name="m_key_p_four_dots">""</string>
    <string name="m_key_p_dot">"·"</string>
    <string name="m_key_p_full_stop">"."</string>
    <string name="m_key_p_dash">"︱"</string>
    <string name="m_key_p_semicolon">";"</string>
    <string name="m_key_p_birga">"᠀"</string>
    <string name="m_key_p_at">"@"</string>
    <string name="e_key_q">q</string>
    <string name="e_key_w">w</string>
    <string name="e_key_e">e</string>
    <string name="e_key_r">r</string>
    <string name="e_key_t">t</string>
    <string name="e_key_y">y</string>
    <string name="e_key_u">u</string>
    <string name="e_key_i">i</string>
    <string name="e_key_o">o</string>
    <string name="e_key_p">p</string>
    <string name="e_key_a">a</string>
    <string name="e_key_s">s</string>
    <string name="e_key_d">d</string>
    <string name="e_key_f">f</string>
    <string name="e_key_g">g</string>
    <string name="e_key_h">h</string>
    <string name="e_key_j">j</string>
    <string name="e_key_k">k</string>
    <string name="e_key_l">l</string>
    <string name="e_key_z">z</string>
    <string name="e_key_x">x</string>
    <string name="e_key_c">c</string>
    <string name="e_key_v">v</string>
    <string name="e_key_b">b</string>
    <string name="e_key_n">n</string>
    <string name="e_key_m">m</string>
    <string name="e_key_q_caps">Q</string>
    <string name="e_key_w_caps">W</string>
    <string name="e_key_e_caps">E</string>
    <string name="e_key_r_caps">R</string>
    <string name="e_key_t_caps">T</string>
    <string name="e_key_y_caps">Y</string>
    <string name="e_key_u_caps">U</string>
    <string name="e_key_i_caps">I</string>
    <string name="e_key_o_caps">O</string>
    <string name="e_key_p_caps">P</string>
    <string name="e_key_a_caps">A</string>
    <string name="e_key_s_caps">S</string>
    <string name="e_key_d_caps">D</string>
    <string name="e_key_f_caps">F</string>
    <string name="e_key_g_caps">G</string>
    <string name="e_key_h_caps">H</string>
    <string name="e_key_j_caps">J</string>
    <string name="e_key_k_caps">K</string>
    <string name="e_key_l_caps">L</string>
    <string name="e_key_z_caps">Z</string>
    <string name="e_key_x_caps">X</string>
    <string name="e_key_c_caps">C</string>
    <string name="e_key_v_caps">V</string>
    <string name="e_key_b_caps">B</string>
    <string name="e_key_n_caps">N</string>
    <string name="e_key_m_caps">M</string>
    <string name="e_key_comma">","</string>
    <string name="c_key_Ф">ф</string>
    <string name="c_key_Ц">ц</string>
    <string name="c_key_У">у</string>
    <string name="c_key_Ж">ж</string>
    <string name="c_key_Э">э</string>
    <string name="c_key_Н">н</string>
    <string name="c_key_Г">г</string>
    <string name="c_key_Ш">ш</string>
    <string name="c_key_Ү">ү</string>
    <string name="c_key_З">з</string>
    <string name="c_key_К">к</string>
    <string name="c_key_Ъ">ъ</string>
    <string name="c_key_Й">й</string>
    <string name="c_key_Ы">ы</string>
    <string name="c_key_Б">б</string>
    <string name="c_key_Ө">ө</string>
    <string name="c_key_А">а</string>
    <string name="c_key_Х">х</string>
    <string name="c_key_Р">р</string>
    <string name="c_key_О">о</string>
    <string name="c_key_Л">л</string>
    <string name="c_key_Д">д</string>
    <string name="c_key_П">п</string>
    <string name="c_key_Е">е</string>
    <string name="c_key_Я">я</string>
    <string name="c_key_Ч">ч</string>
    <string name="c_key_Ё">ё</string>
    <string name="c_key_С">с</string>
    <string name="c_key_М">м</string>
    <string name="c_key_И">и</string>
    <string name="c_key_Т">т</string>
    <string name="c_key_Ь">ь</string>
    <string name="c_key_В">в</string>
    <string name="c_key_Ю">ю</string>
    <string name="c_key_comma">","</string>
    <string name="c_key_comma_long">"!"</string>
    <string name="c_key_question">"."</string>
    <string name="c_key_question_long">\?</string>
</resources>