<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/keyboard_base_theme"
              android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/rl_c_key_Ф"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyФ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Ф" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Ц"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyЦ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Ц" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_У"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyУ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_У" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Ж"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyЖ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Ж" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Э"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyЭ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Э" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Н"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyН"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Н" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Г"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyГ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Г" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Ш"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyШ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Ш" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Ү"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyҮ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Ү" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_З"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyЗ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_З" />
        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/rl_c_key_К"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyК"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_К" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Ъ"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyЪ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Ъ" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/rl_c_key_Й"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyЙ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Й" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Ы"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyЫ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Ы" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Б"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyБ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Б" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Ө"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyӨ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Ө" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_А"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyА"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_А" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Х"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyХ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Х" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Р"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyР"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Р" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_О"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyО"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_О" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Л"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyЛ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Л" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Д"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyД"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Д" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_П"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyП"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_П" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Е"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyЕ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Е" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/key_shift"
            style="@style/AppTheme.FormatKeyLayoutStyle"
            android:layout_weight="1.5" >

            <ImageView
                android:id="@+id/ivEkeyShift"
                style="@style/AppTheme.MongolKeyImageStyle"
                android:src="@drawable/ic_keyboard_capslock_white_24dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Я"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyЯ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Я" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Ч"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyЧ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Ч" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Ё"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyЁ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Ё" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_С"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyС"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_С" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_М"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyМ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_М" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_И"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyИ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_И" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Т"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyТ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Т" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Ь"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyЬ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Ь" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_В"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyВ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_В" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_backspace"
            style="@style/AppTheme.FormatKeyLayoutStyle"
            android:layout_weight="1.5" >

            <ImageView
                style="@style/AppTheme.MongolKeyImageStyle"
                android:src="@drawable/ic_keyboard_backspace_white_24dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/key_input"
            style="@style/AppTheme.FormatKeyLayoutStyle"
            android:layout_weight="1.5" >

            <ImageView
                android:id="@+id/ivKeyInput"
                style="@style/AppTheme.MongolKeyImageStyle"
                android:src="@drawable/ic_keyboard_white_24dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_comma"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyComma"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_comma" />

            <TextView
                android:id="@+id/tvCkey42long"
                style="@style/AppTheme.MongolLongPressKeyTextStyle"
                android:text="@string/c_key_comma_long" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_space"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="3" >

            <ImageView
                android:id="@+id/ivEkeySpace"
                style="@style/AppTheme.MongolKeyImageStyle"
                android:src="@drawable/ic_space_bar_white_24dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_question"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyQuestion"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_question" />

            <TextView
                android:id="@+id/tvCkeyQuestionLong"
                style="@style/AppTheme.MongolLongPressKeyTextStyle"
                android:text="@string/c_key_question_long" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_c_key_Ю"
            style="@style/AppTheme.KeyLayoutStyle"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvCkeyЮ"
                style="@style/AppTheme.MongolKeyTextStyle"
                android:text="@string/c_key_Ю" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/key_return"
            style="@style/AppTheme.FormatKeyLayoutStyle"
            android:layout_weight="1.5" >

            <ImageView
                android:id="@+id/ivEkeyReturn"
                style="@style/AppTheme.MongolKeyImageStyle"
                android:src="@drawable/ic_keyboard_return_white_24dp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>