<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <!-- Tallest layout wraps content so main layout can also wrap -->

    <RelativeLayout
        android:id="@+id/menuItemHistoryFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_item"
        android:clickable="true"
        android:onClick="menuHistoryClick"
        android:padding="10dp" >

        <net.studymongolian.chimee.MongolTextView
            style="@style/AppTheme.MongolKeyTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_item_history" />
    </RelativeLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/menu_divider" />

    <FrameLayout
        android:id="@+id/menuItemSettingsFrame"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/menu_item"
        android:clickable="true"
        android:onClick="menuSettingsClick"
        android:padding="10dp" >

        <net.studymongolian.chimee.MongolTextView
            style="@style/AppTheme.MongolKeyTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_item_settings" />
    </FrameLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/menu_divider" />

    <FrameLayout
        android:id="@+id/menuItemAboutFrame"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/menu_item"
        android:clickable="true"
        android:onClick="menuAboutClick"
        android:padding="10dp" >

        <net.studymongolian.chimee.MongolTextView
            style="@style/AppTheme.MongolKeyTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_item_about" />
    </FrameLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/menu_divider" />

    <FrameLayout
        android:id="@+id/menuItemHelpFrame"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/menu_item"
        android:clickable="true"
        android:onClick="menuHelpClick"
        android:padding="10dp" >

        <net.studymongolian.chimee.MongolTextView
            style="@style/AppTheme.MongolKeyTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_item_help" />
    </FrameLayout>
</LinearLayout>